--- a/package.json
+++ b/package.json
@@ -4,5 +4,27 @@
     "express": "^4.18.2",
     "nodemailer": "^6.9.3",
     "nodemon": "^3.0.1"
-  }
+  },
+  "name": "simplemailer---copy",
+  "version": "1.0.0",
+  "main": "app.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" 66 exit 1",
+    "start": "node app.js",
+    "server": "node app.js",
+    "client": "npm start --prefix ./client",
+    "dev": "concurrently \"npm start\" \"npm run client\""
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MayurDhwaj2001/SimpleMailer.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/MayurDhwaj2001/SimpleMailer/issues"
+  },
+  "homepage": "https://github.com/MayurDhwaj2001/SimpleMailer#readme",
+  "description": ""
 }
